fix: draggable images on firefox

--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,12 @@
 }
 
 .draggable-area.grabbing * {
-    user-drag: none;
+    -webkit-user-drag: none;
     user-select: none;
+}
+
+.draggable-area.moving * {
+    pointer-events: none;
 }
 
 .draggable-area.grabbing *:not(a, button) {
